--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
     "name": "mutable-ref",
     "description": "A .value setter that emits change events",
     "version": "1.0.0",
-    "exports": {
-        ".": "./-.js"
-    },
+    "exports": "./-.js",
     "scripts": {
         "dev.linux": "./dev.sh"
     },
