--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-    "name": "mutable-ref",
-    "description": "A .value setter that emits change events",
-    "version": "1.0.0",
-    "exports": "./-.js",
-    "scripts": {
-        "dev.linux": "./dev.sh"
-    },
-    "devDependencies": {
-        "typescript": "latest"
-    }
+	"name": "mutable-ref",
+	"description": "A .value setter that emits change events",
+	"version": "1.0.0",
+	"exports": "./-.js",
+	"devDependencies": {
+		"typescript": "^4.7.3"
+	}
 }
