Try to chmod +x in the build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,4 @@ jobs:
         with:
           node-version: 14
           cache: npm
-      - run: ./build.sh
+      - run: chmod +x ./build.sh && ./build.sh
