Try to save a build artifact
Upload artifact: https://github.com/actions/upload-artifact

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,7 @@ jobs:
           node-version: 14
           cache: npm
       - run: chmod +x ./build.sh && ./build.sh
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: ./
